limpeza de branch

--- a/ola-mundo/src/components/ListaDeItens/styles.css
+++ b/ola-mundo/src/components/ListaDeItens/styles.css
@@ -1,14 +1,14 @@
-.campo-texto {
+.lista-de-itens{
   margin: 14px 0;
 }
 
-.campo-texto label {
+label {
   display: block; 
   margin-bottom: 8px;
   font-size: 16px;
 }
 
-.campo-texto input {
+.lista-de-itens select {
   font-size: 14px;
   padding: 12px; 
   border: 1px #000 solid;
